attempting fix on mobile modal close

--- a/style.css
+++ b/style.css
@@ -569,7 +569,7 @@ body.modal-open-mobile{
 /* Styling For Modals on Mobiile*/
 @media only screen and (max-width: 720px){
   .project-modal-close{
-    right: 32px;
+    right: 0px;
   }
 
   .project-modal-content{
